--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ajax Calendar</title>
+<script src="https://momentjs.com/downloads/moment-with-locales.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.js" charset="utf-8"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
@@ -10,7 +11,20 @@
   </head>
   <body>
     <div class="wrapper">
+      <h1></h1>
+      <div class="bottoni">
 
+        <button id="prev">Precedente</button>
+      <button id="next">Prossimo</button>
+    </div>
+      <ul>
+        <li></li>
+      </ul>
+
+      <div class="templates">
+        <li></li>
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
