--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="it" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Ajax Calendar</title>
-<script src="https://momentjs.com/downloads/moment-with-locales.js" charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.js" charset="utf-8"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <h1></h1>
-      <div class="bottoni">
-        <button id="prev">Precedente</button>
-      <button id="next">Prossimo</button>
-    </div>
-      <ul>
-        <li></li>
+<head>
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js" charset="utf-8"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js" charset="utf-8"></script>
+  <script src="main.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="style.css">
+  <title>Ajax BoolFlix</title>
+</head>
+<body>
+  <div class="container">
+    <div class="navbar">
+      <input id="ricerca" type="text"  placeholder="Inserisci un film che vuoi trovare nel database">
+      <button id="bottone">Cerca</button>
+      <ul class="lista_film">
+      
       </ul>
-
-      <div class="templates">
-        <li></li>
-      </div>
-    </div>
-    <script src="main.js"></script>
-  </body>
+      <script id="entry-template" type="text/x-handlebars-template">
+        <ul>
+          <li>Titolo: {{titolo_film}}</li>
+          <li>Titolo Originale: {{titolo_originale}}</li>
+          <li>Lingua Originale: {{lingua}}</li>
+          <li>Voto: {{voto}}</li>
+          <br>
+        </ul>
+      </script>
+  </div>
+</body>
 </html>
