--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js" charset="utf-8"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <script src="main.js" charset="utf-8"></script>
   <link rel="stylesheet" href="style.css">
   <title>Ajax BoolFlix</title>
@@ -18,12 +19,13 @@
       <button id="bottone">Cerca</button>
       <ul class="lista_film">
       </ul>
+    </div>
       <script id="entry-template" type="text/x-handlebars-template">
         <ul>
           <li>Titolo: {{titolo_film}}</li>
           <li>Titolo Originale: {{titolo_originale}}</li>
           <li>Lingua Originale: {{lingua}}</li>
-          <li>Voto: {{voto}}</li>
+          <li>Voto: <span class="stars">{{{voto}}}</span></li>
           <br>
         </ul>
       </script>
